NIFI-12037 Update AzureUserGroupProvider to allow configuration of the graph endpoint and API scope to support regional clouds.